[BugFix] fix gc options