@@ -134,7 +134,7 @@ public class ParameterServerJVM {
             .append(directRegionSize).append("M").append(" -XX:SurvivorRatio=")
             .append(suvivorRatio).append(" -XX:PermSize=100M -XX:MaxPermSize=200M")
             .append(" -XX:+AggressiveOpts").append(" -XX:+UseLargePages")
-            .append(" -XX:+UseParallelGC").append(" -XX:+UseAdaptiveSizePolicy")
+            .append(" -XX:+UseConcMarkSweepGC").append(" -XX:+UseAdaptiveSizePolicy")
             .append(" -XX:CMSInitiatingOccupancyFraction=70")
             .append(" -XX:+UseCMSInitiatingOccupancyOnly").append(" -XX:+CMSScavengeBeforeRemark")
             .append(" -XX:+UseCMSCompactAtFullCollection").append(" -verbose:gc")
